# prophet-arena-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_SUBMISSION.md  Procfile  README.md  pyproject.toml  render.yaml
prophet_arena_agent/: forecast.py  models.py  prompt.py  retrieval.py  server.py
tests/: test_contract.py  test_pipeline.py  test_retrieval.py
