[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prophet-arena-agent"
version = "0.1.0"
description = "Minimal Prophet Arena forecasting endpoint."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Kairosity Labs" }]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.6"]

[project.scripts]
prophet-arena-agent = "prophet_arena_agent.server:main"

[tool.hatch.build.targets.wheel]
packages = ["prophet_arena_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
